<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/burger"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/orders"
            android:icon="@drawable/food_icon"
            android:title="@string/orders" />
        <item
            android:id="@+id/kitchen"
            android:icon="@drawable/chef_icon"
            android:title="@string/kitchen" />
        <item
            android:id="@+id/delivery"
            android:icon="@drawable/delivery_icon"
            android:title="@string/delivery" />
        <item
            android:id="@+id/delivery_list"
            android:icon="@drawable/delivery_icon"
            android:title="@string/delivery_list" />
        <item
            android:id="@+id/add_food"
            android:icon="@drawable/add_food_icon"
            android:title="@string/add_food" />
        <item
            android:id="@+id/billing"
            android:icon="@drawable/add_bill_icon"
            android:title="@string/billing" />
        <item
            android:id="@+id/bill_details"
            android:icon="@drawable/biil_icon"
            android:title="@string/bill_details" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />
    </group>
</menu>